change .big styles change h1 text to Git test

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -7,9 +7,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<style type="text/css">
 		.big {
-			font-size: 50px !important;
-			color: orange !important;
-			border: 2px solid red;
+			font-size: 20px !important;
+			color: blue !important;
 		}
 	</style>
 	<!-- <script src="https://kit.fontawesome.com/1979c9ef24.js"></script> -->
@@ -26,7 +25,7 @@
 	<div class="jumbotron">
 		<div class="container">
 		<h1><i class="fas fa-code"></i> DESCODE</h1>
-		<p>Maciej Mikołajczyk - portfolio</p>
+		<p>Maciej Mikołajczyk - Git test</p>
 		<p><a class="btn btn-primary btn-lg" href="#" role="button">Kliknij mnie!</a></p>
 		</div>	
 	</div>
