--- a/bootstrap.html
+++ b/bootstrap.html
@@ -24,8 +24,8 @@
 	</nav>
 	<div class="jumbotron">
 		<div class="container">
-		<h1><i class="fas fa-code"></i> DESCODE TEST</h1>
-		<p>Maciej Mikołajczyk - Git test</p>
+		<h1><i class="fas fa-code"></i> DESCODE</h1>
+		<p>Maciej Mikołajczyk - apps portfolio</p>
 		<p><a class="btn btn-primary btn-lg" href="#" role="button">Kliknij mnie!</a></p>
 		</div>	
 	</div>
